chore(scss): style fixes for glide (slider) bullets on mobile

--- a/template/scss/_glide.scss
+++ b/template/scss/_glide.scss
@@ -30,13 +30,6 @@
     background-color: rgba($white, .4);
     border-color: rgba($dark, .4);
 
-    @media (max-width: 575.98px) {
-      border-width: 1px;
-      width: 9px;
-      height: 9px;
-      margin: 0 2px;
-    }
-
     &:hover,
     &:focus,
     &--active {
